unpackaged/main/default/objects/AcctSeed__GL_Account_Mapping__c/fields/AcctSeed__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Account_Name__c</fullName>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>