unpackaged/main/default/objects/AcctSeed__GL_Account_Mapping__c/fields/AcctSeed__Financial_Institution__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Financial_Institution__c</fullName>
    <label>Financial Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>