unpackaged/main/default/objects/AcctSeed__GL_Account_Mapping__c/fields/AcctSeed__Financial_Institution_Id__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Financial_Institution_Id__c</fullName>
    <externalId>true</externalId>
    <label>Financial Institution Id</label>
    <length>127</length>
    <type>Text</type>
</CustomField>