unpackaged/main/default/objects/AcctSeed__GL_Account_Mapping__c/fields/AcctSeed__GL_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GL_Account__c</fullName>
    <label>GL Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Bank__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>GL Account Mappings</relationshipLabel>
    <relationshipName>GL_Account_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>