unpackaged/main/default/objects/AcctSeed__GL_Account_Mapping__c/fields/AcctSeed__Last_Refreshed__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Last_Refreshed__c</fullName>
    <description>The date when Yodlee’s database was last updated with information from the user’s connected bank account. Note: If this date is not updated, FIA credentials or Multi-factor Authentication may need to be refreshed by the user.</description>
    <label>Last Refreshed Date</label>
    <type>DateTime</type>
</CustomField>