unpackaged/main/default/objects/AcctSeed__GL_Account_Mapping__c/fields/AcctSeed__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
    <label>Ledger</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Transactional Ledgers are allowed.</errorMessage>
        <filterItems>
            <field>AcctSeed__Ledger__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Transactional</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>GL Account Mappings</relationshipLabel>
    <relationshipName>GL_Account_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>