unpackaged/main/default/objects/AcctSeed__GL_Account_Mapping__c/fields/AcctSeed__Source__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yodlee</fullName>
            </value>
            <value>
                <fullName>Financial File Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>